<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:background="@color/background_01"
        android:textSize="20dp"
        android:text="ПРИЛОЖЕНИЕ ПЛЕЕР"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/textOut"
        android:layout_width="353dp"
        android:layout_height="41dp"
        android:text="Название мелодии"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/background_01"
        android:gravity="clip_horizontal|center"

        android:textColor="@color/design_default_color_primary"
        android:textColorHint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="299dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="120dp"
        android:background="@color/background_01"
        android:gravity="clip_horizontal|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOut">

        <Button
            android:id="@+id/btnResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/resume" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btnBackward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/backward" />

        <Button
            android:id="@+id/btnForward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/forward" />

        <Switch
            android:id="@+id/switchLoop"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/loop" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/background_01"
        android:gravity="clip_horizontal|center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnLouder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Громче" />

        <Button
            android:id="@+id/btnQuieter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Тише" />

        <Button
            android:id="@+id/btnEarlier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Назад" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="353dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/background_01"
        android:gravity="center"
        android:text="ИСТОЧНИКИ"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/background_01"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnRAW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSource"
            android:text="@string/raw" />

        <Button
            android:id="@+id/btnStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSource"
            android:text="@string/uri" />

        <Button
            android:id="@+id/btnSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSource"
            android:text="@string/sd" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>